src/test/ui/hrtb/hrtb-higher-ranker-supertraits.stderr
error[E0277]: the trait bound `for<'tcx> F: Foo<'tcx>` is not satisfied
  --> $DIR/hrtb-higher-ranker-supertraits.rs:18:5
   |
LL |     want_foo_for_any_tcx(f);
   |     ^^^^^^^^^^^^^^^^^^^^ the trait `for<'tcx> Foo<'tcx>` is not implemented for `F`
   |
   = help: consider adding a `where for<'tcx> F: Foo<'tcx>` bound
note: required by `want_foo_for_any_tcx`
  --> $DIR/hrtb-higher-ranker-supertraits.rs:21:1
   |
LL | / fn want_foo_for_any_tcx<F>(f: &F)
LL | |     where F : for<'tcx> Foo<'tcx>
LL | | {
LL | |     want_foo_for_some_tcx(f);
LL | |     want_foo_for_any_tcx(f);
LL | | }
   | |_^

error[E0277]: the trait bound `for<'ccx> B: Bar<'ccx>` is not satisfied
  --> $DIR/hrtb-higher-ranker-supertraits.rs:35:5
   |
LL |     want_bar_for_any_ccx(b);
   |     ^^^^^^^^^^^^^^^^^^^^ the trait `for<'ccx> Bar<'ccx>` is not implemented for `B`
   |
   = help: consider adding a `where for<'ccx> B: Bar<'ccx>` bound
note: required by `want_bar_for_any_ccx`
  --> $DIR/hrtb-higher-ranker-supertraits.rs:38:1
   |
LL | / fn want_bar_for_any_ccx<B>(b: &B)
LL | |     where B : for<'ccx> Bar<'ccx>
LL | | {
LL | |     want_foo_for_some_tcx(b);
...  |
LL | |     want_bar_for_any_ccx(b);
LL | | }
   | |_^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
